[package]
name = "rustqubo"
version = "0.1.0"
authors = ["yozu <yasuo@ozu.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.55.1"
rand = {version = "0.7.3", features = ["small_rng"]}
# futures = {version = "0.3", features = ["thread-pool"]}
rayon = "1.5.0"
